# archive-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yml  docker-compose.yml  go.mod  go.sum  main.go  openapi.json  pyproject.toml  renovate.json
.github/actions/setup-deps/: action.yml
.github/workflows/: ci.yml  deploy-redoc-docs.yml  openapi-sync.yml  setup-repo.yml
api/: api.gen.go  server.cfg.yml  server.gen.go  types.gen.go
app/: app.py  db.py  openapi.py
app/categories/: routes.py  schemas.py
app/category/: routes.py
app/core/: config.py
app/departments/: routes.py  schemas.py
app/logger/: __init__.py  custom.py  middleware.py  processors.py
app/websites/: routes.py  schemas.py
app/websites/details/: __init__.py  db.py
app/websites/search/: __init__.py  cursor.py  db.py
docs/: docs.go  openapi.yml  swagger-ui.html  swagger.json  swagger.yaml
internal/db/: db.go
internal/features/get-archived-dates/: http_handler.go
internal/features/search-archives/: http_handler.go
internal/features/search-archives/query/: dummy.go  postgres.go  search-archive.sql
internal/features/swagger-ui/: http_handler.go
internal/features/update-website/: http_handler.go
internal/features/update-website/command/: dummy.go
internal/server/: server.go
