[project]
name = "archive-api"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    { name = "alan910127", email = "70696274+alan910127@users.noreply.github.com" },
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.26.0",
    "structlog>=24.1.0",
    "asgi-correlation-id>=4.3.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "result>=0.16.0",
    "asyncpg>=0.29.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "ruff>=0.1.14",
    "click>=8.1.7",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "uvicorn app.app:app --reload --port 8000 --host 0.0.0.0 --log-config uvicorn_disable_logging.json"
"schema:gen" = { call = "app.openapi:dump_schema" } 
format = "ruff format ."
lint = "ruff check ."

[tool.ruff]
extend-select = [
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PGH", # pygrep-hooks
    "RUF", # ruff
]
